# Path-Planning-with-Incomplete-Map

./: .gitignore  README.md  frames.gv  simulation.py
log/: latest_list
src/reinforcement_planning/: CMakeLists.txt  package.xml
src/reinforcement_planning/config/: map.yaml
src/reinforcement_planning/ddpg_planning/: setup.py
src/reinforcement_planning/ddpg_planning/ddpg_planning/: ActorNetwork.py  Agent.py  CriticNetwork.py  Eval_ddpg.py  ddpg.py  simulation.py
src/reinforcement_planning/ddpg_planning/ddpg_planning.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/reinforcement_planning/ddpg_planning/reinforcement_planning.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/reinforcement_planning/launch/: bringup_launch.py  gazebo_robot.launch.py  interface.launch.py  launch_nodes.launch.py  launch_robots.launch.py  launch_robots0.launch.py  launch_robots1.launch.py  multi_box_bot_v3.launch.py  nav_launch.launch.py  navigation_launch.py  spawn_robot.launch.py
src/reinforcement_planning/launch_tests/: launch_nodes.launch.py  launch_robots.launch.py  launch_robots0.launch.py  launch_robots1.launch.py  new.launch.py
src/reinforcement_planning/reinforcement_planning/: ActorNetwork.py  Agent.py  CriticNetwork.py  Eval_ddpg.py  OUActionNoise.py  README.md  ddpg.py  simulation.py
src/reinforcement_planning/scripts/: map_loader.py  plan_saver.py  rein_interface.py  reinforce_interface.py  spawn_robots.py
src/reinforcement_planning/src/: map_loader.cpp
src/reinforcement_planning/worlds/: 2empty_world.world  empty_world.model  sonar_turtlebot.model
(+64 files in other folders)
